kubernetes/blackbox-exporter/base/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: blackbox-exporter
  labels:
    openshift.io/cluster-monitoring: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
