kubernetes/blackbox-exporter/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: blackbox-exporter
  labels:
    app: blackbox-exporter
    app.kubernetes.io/instance: blackbox-exporter
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_35=Not Supported
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: blackbox-exporter
              topologyKey: "kubernetes.io/hostname"
      automountServiceAccountToken: false
      containers:
        - name: blackbox-exporter-container
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          # renovate: datasource=docker depName=docker.io/prom/blackbox-exporter
          image: docker.io/prom/blackbox-exporter:v0.29.0@sha256:9613f2884689b6fad9f1939f6a3b0388c93a022cfaededb19545b329b5c83dea
          imagePullPolicy: IfNotPresent
          args:
            - --config.file=/config/config.yml
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
          securityContext:
            privileged: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 9115
              name: blackbox-port
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: blackbox-port
          readinessProbe:
            httpGet:
              path: /
              port: blackbox-port
          resources:
            limits:
              cpu: 30m
              memory: 144Mi
            requests:
              cpu: 15m
              memory: 72Mi
      volumes:
        - name: config
          configMap:
            name: blackbox-exporter
      enableServiceLinks: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
          - name: timeout
            value: "2"
          - name: attempts
            value: "3"
