kubernetes/blackbox-exporter/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  namespace: blackbox-exporter
  labels:
    app: blackbox-exporter
spec:
  ports:
    - port: 9115
      protocol: TCP
      targetPort: blackbox-port
      name: blackbox-port
  selector:
    app: blackbox-exporter
